alignment and correction in responsiveness

--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -58,7 +58,7 @@
   /* Back to Top Button Styles */
 .back-to-top {
   position: fixed;
-  bottom: 40px;
+  bottom: 20px;
   right: 40px;
   width: 50px; /* Adjust based on your image size */
   height: 50px;
