--- a/assets/css/ourspecality.css
+++ b/assets/css/ourspecality.css
@@ -20,7 +20,7 @@ body {
   display: flex;
   align-items: center;
   color: white;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   border: 1px solid #262525;
 }
 
@@ -32,11 +32,16 @@ body {
 }
 
 .fluid-video {
-  width: 100%;  /* Ensure the video takes up the full width of the container */
+  width: 100%; /* Ensure the video takes up the full width of the container */
   height: auto !important; /* Maintain aspect ratio */
   display: block; /* Removes any default margins */
-  border: 3px solid #cafe15; /* Set your desired border size and color */
+  border: 2px solid transparent;
+  border-image: linear-gradient(270.23deg, #c7fb15 0%, #1dfb15 100%);
+  border-image-slice: 1;
   box-sizing: border-box; /* Include the border in the element’s total width and height */
+  position: relative;
+  top: 0px;
+  bottom: 0px;
 }
 
 .fluid-video source {
@@ -45,7 +50,7 @@ body {
 
 .video-container {
   overflow: hidden; /* Ensure the video doesn't overflow */
-  max-width: 100%;  /* Ensure the video scales properly */
+  max-width: 100%; /* Ensure the video scales properly */
 }
 
 .section-padding {
@@ -57,14 +62,6 @@ body {
 .video-file {
   padding: 30px;
   overflow: hidden;
-}
-.fluid-video {
-  max-width: 100% !important;
-  height: 100% !important;
-  position: relative;
-  top: 0px;
-  bottom: 0px;
-  border-radius: 8px;
 }
 .business-section {
   background-color: #212121; /* Dark background */
@@ -78,7 +75,7 @@ body {
   font-size: 2rem;
 }
 .specializations {
-  margin-top: 35px !important;
+  margin-top: 50px !important;
 }
 .business-section h1 span {
   color: #cafe15; /* Highlighted text in green */
@@ -115,14 +112,15 @@ body {
 .feature-box img {
   width: 50px;
   padding: 1px;
-  margin-left: 11px;
+  margin-left: 14px;
 }
 .feature-box p {
-  font-size: 16px;
+  font-size: 15px;
   /* opacity: 0.6; */
   line-height: 20px;
   padding-left: 12px;
   /* font-size: 14px; */
+  opacity: 0.8;
 }
 .first-point {
   padding-right: 32px !important;
@@ -156,37 +154,38 @@ body {
   display: none !important;
   margin-left: 0px;
 }
-.designing-fonts{
+.designing-fonts {
   font-size: 40px !important;
   padding: 0 368px !important;
 }
 
 @media (max-width: 992px) {
   .fluid-video {
-    width: 100%;  /* Ensure the video takes up the full width of the container */
+    width: 100%; /* Ensure the video takes up the full width of the container */
     height: auto !important; /* Maintain aspect ratio */
     display: block; /* Removes any default margins */
-    border: 2px solid #cafe15; /* Set your desired border size and color */
+    border: 2px solid transparent;
+    border-image: linear-gradient(270.23deg, #c7fb15 0%, #1dfb15 100%);
+    border-image-slice: 1;
     box-sizing: border-box; /* Include the border in the element’s total width and height */
-
   }
- 
-  .section-padding{
+
+  .section-padding {
     padding: 0px 0px !important;
   }
   .fluid-video source {
     display: block;
   }
-  
+
   .video-container {
     overflow: hidden; /* Ensure the video doesn't overflow */
-    max-width: 100%;  /* Ensure the video scales properly */
+    max-width: 100%; /* Ensure the video scales properly */
   }
-  
+
   .image-box {
     padding: 0 2px 0 11px;
   }
-  .designing-fonts{
+  .designing-fonts {
     /* font-size: 40px !important; */
     padding: 0px 0px !important;
   }
@@ -229,25 +228,28 @@ body {
     display: block !important;
     margin-left: 0px;
   }
-  .feature-box-margin{
+  .feature-box-margin {
     margin-left: 1px !important;
   }
 }
-@media (max-width: 766px){
-  .speciality-text p{
+@media (max-width: 766px) {
+  body{
+    padding: 0  10px 0 5px;
+  }
+  .speciality-text p {
     padding: 0 10px 0 10px;
     /* text-align: center; */
   }
-  .designing-fonts{
+  .designing-fonts {
     font-size: 40px !important;
     padding: 0 16px !important;
   }
 }
 @media (min-width: 768px) and (max-width: 997px) {
-  .image-box{
+  .image-box {
     padding: 0 2px 0 11px;
   }
-  .feature-box-margin{
+  .feature-box-margin {
     margin-left: 1px !important;
   }
   .first-point {
@@ -282,26 +284,28 @@ body {
     width: 100%;
   }
   .fluid-video {
-    width: 100%;  /* Ensure the video takes up the full width of the container */
+    width: 100%; /* Ensure the video takes up the full width of the container */
     height: auto !important; /* Maintain aspect ratio */
     display: block; /* Removes any default margins */
-    border: 5px solid rgb(99, 242, 91); /* Set your desired border size and color */
+    border: 2px solid transparent;
+    border-image: linear-gradient(270.23deg, #c7fb15 0%, #1dfb15 100%);
+    border-image-slice: 1;
     box-sizing: border-box; /* Include the border in the element’s total width and height */
   }
-  .designing-fonts{
+  .designing-fonts {
     font-size: 40px !important;
     padding: 0 278px !important;
   }
-  
+
   .fluid-video source {
     display: block;
   }
-  
+
   .video-container {
     overflow: hidden; /* Ensure the video doesn't overflow */
-    max-width: 100%;  /* Ensure the video scales properly */
+    max-width: 100%; /* Ensure the video scales properly */
   }
-  
+
   .first-point {
     padding-right: 80px !important;
   }
